welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: identifier expected but integer literal found.
	var ag = a:10
                   ^shareDigit:8: error: ')' expected but 'else' found.
	} else { 
          ^